# Ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
jarvis/: .env.example  .gitignore  README.md  docker-compose.yml
jarvis/.github/workflows/: ci-cd.yml
jarvis/backend/: Dockerfile  main.py  requirements.txt
jarvis/backend/core/agents/: __init__.py  agent_registry.py  base_agent.py  executive_agents.py
jarvis/backend/core/brain/: __init__.py  brain_controller.py  neural_graph.py  regions.py
jarvis/backend/core/memory/: __init__.py  memory_system.py
jarvis/backend/core/neural/: __init__.py
jarvis/backend/core/security/: __init__.py
jarvis/backend/core/tools/: __init__.py
jarvis/backend/core/vision/: __init__.py
jarvis/backend/core/voice/: __init__.py  voice_system.py
jarvis/backend/core/workflows/: __init__.py  engine.py
jarvis/backend/models/: __init__.py  database.py
jarvis/backend/tests/unit/: test_brain.py  test_memory.py  test_workflows.py
jarvis/frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
jarvis/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
jarvis/frontend/src/hooks/: useWebSocket.ts
jarvis/frontend/src/stores/: neuralStore.ts
jarvis/infrastructure/docker/postgres/: init.sql
src/ai_app/: __init__.py  cli.py  config.py  main.py  models.py  responder.py
src/ai_app/static/: index.html
tests/: test_api.py  test_cli.py  test_config.py  test_mock_mode.py
(+14 files in other folders)
